# regime-aware-portfolio-risk-allocation

./: .gitignore  ALL_PROJECT_FILES.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: README.md
docs/: DECISIONS.md  LITERATURE_MAP.md  PROJECT_LOG.md  REPRODUCIBILITY.md  RESULTS_SUMMARY.md  ROADMAP.md  research_positioning.md
examples/: quick_start.py
notebooks/: 01_data_pipeline.ipynb  02_regime_detection.ipynb  03_regime_conditioned_risk.ipynb  04_allocation_backtest.ipynb  05_smdp_stress_policy.ipynb
reports/tables/data_pipeline/: missing_values_summary.csv
reports/tables/regime_detection/: regime_summary.csv  regime_transition_counts.csv  regime_transition_matrix.csv
src/regime_portfolio/: __init__.py  allocation.py  backtest.py  data.py  diagnostics.py  features.py  metrics.py  regimes.py  risk.py  smdp_policy.py  visualization.py
tests/: test_allocation.py  test_backtest.py  test_diagnostics.py  test_features.py  test_risk.py
