[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-aware-portfolio-risk-allocation"
version = "0.1.0"
description = "Regime-aware portfolio risk and allocation with an SMDP-inspired stress policy layer."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Alex Dalla Torre"}
]
license = {text = "GNU"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2,<3.0",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10.0",
    "cvxpy>=1.4",
    "hmmlearn>=0.3.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ruff>=0.5",
    "nbconvert>=7.16"
]
portfolio = [
  "PyPortfolioOpt>=1.5",
  "riskfolio-lib>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
